# server/docs/swagger.json
@@ -235,8 +235,8 @@
                 "tags": [
                     "Room"
                 ],
-                "summary": "Leave Room",
-                "operationId": "LeaveRoom",
+                "summary": "Delete Room",
+                "operationId": "DeleteRoom",
                 "parameters": [
                     {
                         "type": "string",
